--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -27,6 +27,8 @@ jobs:
     permissions:
       id-token: write
       contents: read
+    env:
+      AZURE_CONTAINER_REGISTRY_ENDPOINT: https://famtodo${{ github.run_id }}acr.azurecr.io
     steps:
       - name: Set AZURE_ENV_NAME from GitHub Environment
         run: echo "AZURE_ENV_NAME=${{ vars.AZURE_ENV_NAME }}" >> $GITHUB_ENV
@@ -75,6 +77,13 @@ jobs:
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
+
+      - name: Get Container Registry Name from azd output
+        id: get_registry
+        run: |
+          REGISTRY_NAME=$(azd env get-output --environment $AZURE_ENV_NAME --output json | jq -r '.containerRegistryName')
+          echo "REGISTRY_NAME=$REGISTRY_NAME" >> $GITHUB_ENV
+          echo "AZURE_CONTAINER_REGISTRY_ENDPOINT=https://$REGISTRY_NAME.azurecr.io" >> $GITHUB_ENV
 
       - name: azd deploy
         run: azd deploy --environment $AZURE_ENV_NAME
@@ -165,6 +174,13 @@ jobs:
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
 
+      - name: Get Container Registry Name from azd output
+        id: get_registry
+        run: |
+          REGISTRY_NAME=$(azd env get-output --environment $AZURE_ENV_NAME --output json | jq -r '.containerRegistryName')
+          echo "REGISTRY_NAME=$REGISTRY_NAME" >> $GITHUB_ENV
+          echo "AZURE_CONTAINER_REGISTRY_ENDPOINT=https://$REGISTRY_NAME.azurecr.io" >> $GITHUB_ENV
+
       - name: azd deploy
         run: azd deploy --environment $AZURE_ENV_NAME
 
@@ -253,6 +269,13 @@ jobs:
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
+
+      - name: Get Container Registry Name from azd output
+        id: get_registry
+        run: |
+          REGISTRY_NAME=$(azd env get-output --environment $AZURE_ENV_NAME --output json | jq -r '.containerRegistryName')
+          echo "REGISTRY_NAME=$REGISTRY_NAME" >> $GITHUB_ENV
+          echo "AZURE_CONTAINER_REGISTRY_ENDPOINT=https://$REGISTRY_NAME.azurecr.io" >> $GITHUB_ENV
 
       - name: azd deploy
         run: azd deploy --environment $AZURE_ENV_NAME
@@ -343,6 +366,13 @@ jobs:
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
 
+      - name: Get Container Registry Name from azd output
+        id: get_registry
+        run: |
+          REGISTRY_NAME=$(azd env get-output --environment $AZURE_ENV_NAME --output json | jq -r '.containerRegistryName')
+          echo "REGISTRY_NAME=$REGISTRY_NAME" >> $GITHUB_ENV
+          echo "AZURE_CONTAINER_REGISTRY_ENDPOINT=https://$REGISTRY_NAME.azurecr.io" >> $GITHUB_ENV
+
       - name: azd deploy
         run: azd deploy --environment $AZURE_ENV_NAME
 
@@ -431,6 +461,13 @@ jobs:
 
       - name: azd provision
         run: azd provision --environment $AZURE_ENV_NAME
+
+      - name: Get Container Registry Name from azd output
+        id: get_registry
+        run: |
+          REGISTRY_NAME=$(azd env get-output --environment $AZURE_ENV_NAME --output json | jq -r '.containerRegistryName')
+          echo "REGISTRY_NAME=$REGISTRY_NAME" >> $GITHUB_ENV
+          echo "AZURE_CONTAINER_REGISTRY_ENDPOINT=https://$REGISTRY_NAME.azurecr.io" >> $GITHUB_ENV
 
       - name: azd deploy
         run: azd deploy --environment $AZURE_ENV_NAME
