--- a/src/flutter_app/pubspec.yaml
+++ b/src/flutter_app/pubspec.yaml
@@ -10,7 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
-  supabase_flutter: ^2.0.0
   flutter_riverpod: ^2.5.1
-  flutter_local_notifications: ^17.0.0
-  intl: ^0.19.0
+  http: ^1.1.0
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^3.0.0
+
+flutter:
+  uses-material-design: true
