--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -57,11 +57,9 @@ jobs:
         run: |
           azd auth login --client-id ${{ secrets.AZURE_CLIENT_ID }} --tenant-id ${{ secrets.AZURE_TENANT_ID }} --federated-credential-provider github
 
-      - name: Configure azd environment
+      - name: Create or Update azd environment
         run: |
-          azd env select ${{ github.event.inputs.environment || 'dev' }}
-          azd env set AZURE_SUBSCRIPTION_ID ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          azd env set AZURE_LOCATION ${{ secrets.AZURE_LOCATION }}
+          azd env new ${{ github.event.inputs.environment || 'dev' }} --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }} --location ${{ secrets.AZURE_LOCATION }} --no-prompt
 
       - name: Provision Infrastructure
         run: |
